usr/src/uts/common/sys/ucode.h
@@ -226,6 +226,8 @@ typedef union ucode_file {
 
 extern ucode_errno_t ucode_header_validate_intel(ucode_header_intel_t *);
 extern uint32_t ucode_checksum_intel(uint32_t, uint32_t, uint8_t *);
+extern uint32_t ucode_checksum_intel_extsig(ucode_header_intel_t *,
+    ucode_ext_sig_intel_t *);
 
 extern ucode_errno_t ucode_validate_amd(uint8_t *, int);
 extern ucode_errno_t ucode_validate_intel(uint8_t *, int);
